refactor(Cars): getPresentCarsStatus 변경
getPresentCarsStatus가 반환된 값이 원본 리스트가 변경되어도 변하지 않도록(immutable 하도록) 수정